# ts_ess_ringss

./: .gitignore  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.py
conda/: meta.yaml
doc/: conf.py  index.rst  manifest.yaml  version_history.rst
doc/news/: DM-50895.perf.rst
python/lsst/ts/ess/ringss/: __init__.py  ringss_data_client.py  sqlalchemy_data_client.py
tests/: ringss.ecsv  test_ringss_client.py
ups/: ts_ess_ringss.table
