[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_ess_ringss"
description = "An ESS data client for the SOAR RINGSS database."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { documentation = "https://ts-ess-ringss.lsst.io", repository = "https://github.com/lsst-ts/ts_ess_ringss" }
dynamic = ["version"]
dependencies = ["aiosqlite"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
